# ascii_designer

./: .gitignore  LICENSE  README.rst  embedding.py  example.py  notes.txt  pyproject.toml  requirements.txt  setup.py  test_ascii_designer.py  tox.ini
7gui/: 1_counter.py  2_temperature.py
ascii_designer/: __init__.py  ascii_slice.py  autoframe.py  event.py  i18n.py  list_model.py  tk_generic_var.py  tk_treeedit.py  tk_treeview.py  toolkit.py  toolkit_qt.py  toolkit_tk.py
demo_hexviewer/: __main__.py  mainwindow.py
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  manual.rst  requirements.txt  translating.rst
examples/: 1_counter.py  2_temperature.py  3_flight_booker.py  4_timer.py  5_crud.py  README.rst  embedding.py  text_transformer.py
src/ascii_designer/: __init__.py  ascii_slice.py  autoframe.py  list_model.py  tk_generic_var.py
test_ascii_designer_i18n/: de.json  default.json
tests/: test_basic.py  test_event.py  test_list_model.py  test_parse.py  test_slice.py
