[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="ascii_designer"
dynamic = ["version"]
dependencies = []
requires-python=">3.7"
authors=[
    { name="Johannes Loehnert", email="loehnert.kde@gmx.de" },
]
description="Builds dialogs from ASCII art definition."
readme="README.rst"
license={file = "LICENSE"}
classifiers=[
"Development Status :: 4 - Beta",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
qtsupport = ["qtpy"]
# TKinter: there is no Tkinter pypi package :-/

[project.urls]
Homepage="http://github.com/loehnertj/ascii_designer"
Repository="http://github.com/loehnertj/ascii_designer"
Documentation="https://ascii-designer.readthedocs.io/"
Issues="http://github.com/loehnertj/ascii_designer/issues"

[tool.setuptools.dynamic]
version = {attr = "ascii_designer.__version__"}
